--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-react-views": "^0.11.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.5",
+    "mongoose-paginate-v2": "^1.3.6",
     "morgan": "~1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
