--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "mongolin": "mongod --noauth --dbpath './mongodb'",
+    "mongowin": "mongod --noauth --dbpath"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
