--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
     "mongoose-paginate-v2": "^1.3.6",
     "morgan": "~1.9.1",
