--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "mongowin": "mongod --noauth"
   },
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
