--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongowin": "mongod --noauth"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -20,6 +21,9 @@
     "mongoose": "^5.9.5",
     "mongoose-paginate-v2": "^1.3.6",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
