--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongowin": "mongod --noauth"
   },
   "dependencies": {
-    "connect-ensure-login": "^0.1.1",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -23,7 +24,6 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
